--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
@@ -24,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
