--- a/.gitignore
+++ b/.gitignore
@@ -203,4 +203,15 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# .gitignore
+
+.env
+.env.local
+.env.production
+.env.development
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,nextjs,react,vim,git
+
+data
+
+
