--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
