--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
