--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@lucasmogari/react-pagination": "^1.2.0",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
@@ -17,13 +18,15 @@
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "next-cloudinary": "^6.2.1",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-kakao-maps-sdk": "^1.1.26",
     "recoil": "^0.7.7",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
