--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "next-cloudinary": "^6.2.1",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-toastify": "^10.0.4",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar-hide": "^1.1.7"
