--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-kakao-maps-sdk": "^1.1.26",
     "react-toastify": "^10.0.4",
     "recoil": "^0.7.7",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
