--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.4",
     "recoil": "^0.7.7",
     "sharp": "^0.33.2",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
