--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.4",
     "recoil": "^0.7.7",
     "sharp": "^0.33.2",
